Vincular pagina web de ticket

--- a/index-PagPrincipal.html
+++ b/index-PagPrincipal.html
@@ -22,8 +22,8 @@
                   <a class="nav-link active" aria-current="page" href="#">La Conferencia</a>
                   <a class="nav-link" href="#oradores">Los Oradores</a>
                   <a class="nav-link" href="#lugar">El lugar y la fecha</a>
-                  <a class="nav-link" href="#">Conviertete en Orador</a>
-                  <a class="nav-link disabled text-success">Comprar tickets</a>
+                  <a class="nav-link" href="#orador">Conviertete en Orador</a>
+                  <a class="nav-link ticket" href="../Trabajo_integrador2/index.html">Comprar tickets</a>
                 </div>
               </div>
             </div>
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-   <div class="container text-center formulario">
+   <div class="container text-center formulario" id="orador">
       <p class="fs-6 text-uppercase mb-0 mt-4">Convirtete en un</p>
       <h2>ORADOR</h2>
       <p>Anotate como orador para dar una charle ignite. Cuentanos de qué quieres hablar</p>
